--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>ros_repo</name>
+  <name>ridgeback_scripts</name>
   <version>0.0.0</version>
-  <description>The ros_repo package</description>
+  <description>The ridgeback_scripts package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
